# apr70-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
orchestrator/: __init__.py  config.py  main.py  tracker.py
orchestrator/providers/: __init__.py  anthropic.py
orchestrator/runners/: __init__.py  claude_code.py  shell.py
scripts/: chown-mounted-repos-on-nas.sh  finish-nas-ssh-git-remotes.sh  op-format-github-token-env.sh
state/: BRIEF.md  TASKS.md
